# sterriar-sample-playwright-auth-state-patterns

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml  codex-auto-review.yml
src/: __init__.py  auth_manager.py  validators.py
tests/: __init__.py  test_auth_manager.py  test_validators.py
