[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playwright-auth-state"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]   # MUST be exactly ["src"] — files go directly under src/

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
